Cambio en boton vaciar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <h1>MI E-COMMERCE</h1><button onclick="vaciarCarro()"
-        style="width: 80px;height:25px;float:left !important;border:none;border-radius: 4px;background: orangered;color: white;font-weight: bold;font-style: oblique;">VACIAR</button>
+        <h1>MI E-COMMERCE</h1><button class="btn-vaciar" onclick="vaciarCarro()"
+        style="width: 80px;height:25px;float:left !important;cursor: pointer;border:none;border-radius: 4px;background: orangered;color: white;font-weight: bold;font-style: oblique;">VACIAR</button>
         <div id="total" 
             style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-size:18px !important;float:right !important;color:black;font-weight:bold;width: 160px;border-radius:11px;height:30px;background: rgb(121, 235, 216);display:flex;justify-content:center;align-items:center;flex-direction:row">
             $0</div>
