--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <h1>MI E-COMMERCE</h1><button class="btn-vaciar" onclick="vaciarCarro()">VACIAR</button>
         <div id="total" 
             style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-size:18px !important;float:right !important;color:black;font-weight:bold;width: 160px;border-radius:11px;height:30px;background: rgb(121, 235, 216);display:flex;justify-content:center;align-items:center;flex-direction:row">
@@ -55,7 +55,7 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody style="width:100%" id="root">
+            <tbody  id="root">
 
             </tbody>
 
